--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 # -*- mode:org -*-
-#+Title: Org-mode web page
+#+Title: Org mode web page
 
-This repository holds the Org-mode web page, http://orgmode.org/.
+This repository holds the Org mode web page, http://orgmode.org/.
 
 The following org-mode publishing project (see [[info:org#Publishing][(org)Publishing]]) may be
-used to export the Org-mode web page locally for development.  Note,
+used to export the Org mode web page locally for development.  Note,
 that after exporting this project you will need to manually edit
 file:pub/index.html to add a style sheet link to the file:pub/org.css
 stylesheet.
