--- a/es/index.org
+++ b/es/index.org
@@ -31,43 +31,43 @@ document.write( b[i] )
 
 (Haz click para agrandar la imagen - presione =Escape= para hacerla pequeña.)
 
-Org-mode es para guardar notas, mantener listas de tareas (TODO), y
+Org mode es para guardar notas, mantener listas de tareas (TODO), y
 para trabajos de autor con un efectivo sistema de texto plano
 
 * Mantén de manera simple cosas simples ... y haz más
 
-- Simplicidad :: En su núcleo, Org-mode es una estructura simple para
+- Simplicidad :: En su núcleo, Org mode es una estructura simple para
                  tomar notas y gestionar listas. Se puede aprender lo
                  básico para usarlo en [[http://orgmode.org/worg/org-tutorials/orgtutorial_dto-es.php][cinco minutos]]. Esto puede ser
-                 todo lo que necesite, y Org-mode no impondrá más
+                 todo lo que necesite, y Org mode no impondrá más
                  funcionalidades complejas. 
 
 - Portabilidad :: Los ficheros Org son [[http://es.wikipedia.org/wiki/Archivo_de_texto][texto plano]]. Se pueden ver y
                   editar en cualquier editor, o añadir y extraer datos
                   con scripts personalizados. Tus datos nunca serán
                   bloqueados en un formato de datos oscuro o
-                  privativo. Org-mode se ejecuta en [[http://www.gnu.org/software/emacs/][Emacs]], que está
+                  privativo. Org mode se ejecuta en [[http://www.gnu.org/software/emacs/][Emacs]], que está
                   disponible en cualquier plataforma. 
 
-- Profundidad :: Org-mode no le fallará cuando necesite más de una
+- Profundidad :: Org mode no le fallará cuando necesite más de una
                  simple nota. El conjunto completo de funcionalidades
                  es amplio y profundo, fácil de acceder, pero no
                  intrusivo. La [[http://orgmode.org/worg/org-faq.php][típica respuesta]] a "/¿Puedo hacer X?/"
                  es "/Sí/".
 
-- Flexibilidad :: Org-mode es como una navaja Suiza. La gente para
+- Flexibilidad :: Org mode es como una navaja Suiza. La gente para
                   [[http://members.optusnet.com.au/~charles57/GTD/orgmode.html][Tener el Trabajo Hecho]], como [[http://newartisans.com/2007/08/using-org-mode-as-a-day-planner/][Planificador Diario]],
                   como [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Libro de Notas]], para publicación Web y de PDFs
                   y mucho más.
 
-- Soporte :: Org-mode está [[http://orgmode.org/manual/index.html][extensivamente documentado]], y muchos
+- Soporte :: Org mode está [[http://orgmode.org/manual/index.html][extensivamente documentado]], y muchos
              [[http://orgmode.org/worg/org-tutorials/index.php][tutoriales]] ponen el foco de atención en funcionalidades
-             particulares. Org-mode da soporte en una activa [[file:org-mode-support.org][lista de
+             particulares. Org mode da soporte en una activa [[file:org-mode-support.org][lista de
              correo]] donde las preguntas son respondidas
              de manera rápida y efectiva.
 
 - ¡Es libre! :: Org es [[http://es.wikipedia.org/wiki/Software_Libre][software libre]], está publicado bajo la [[http://www.gnu.org/licenses/licenses.html#GPL][licencia
                 GNU GPL version 3]], como [[http://www.gnu.org/software/emacs/][GNU Emacs]].
 
-Si le gustaría saber que han dicho otras personas acerca de Org-mode,
+Si le gustaría saber que han dicho otras personas acerca de Org mode,
 eche un vistazo a nuestra [[http://orgmode.org/worg/org-quotes.php][collección de citas acerca de Org]].
