--- a/es/org-mode-donate.org
+++ b/es/org-mode-donate.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: Haz una donación
+#+TITLE: Org mode: Haz una donación
 #+EMAIL:     davidam at gmail dot com
 #+LANGUAGE:  es
 #+KEYWORDS:  Org Emacs outline planificación nota autoría proyecto texto-plano LaTeX HTML
@@ -22,7 +22,7 @@ Por favor, considere hacer una donación a través de paypal:
 <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
   <input type="hidden" name="cmd" value="_xclick" />
   <input type="hidden" name="business" value="bastien1@free.fr" />
-  <input type="hidden" name="item_name" value="Emacs Org-mode maintainance" />
+  <input type="hidden" name="item_name" value="Emacs Org mode maintainance" />
   <input type="hidden" name="item_number" value="1" />
   <input type="hidden" name="lc" value="US" />
   <input type="hidden" name="currency_code" value="USD" />
@@ -33,8 +33,8 @@ Por favor, considere hacer una donación a través de paypal:
 
 * Flattr!
 
-También puede usar flattr para dar soporte a Org-mode. Hacemos flattr
-a proyectos que amamos. Si eres un usuario de Org-mode y quieres que
+También puede usar flattr para dar soporte a Org mode. Hacemos flattr
+a proyectos que amamos. Si eres un usuario de Org mode y quieres que
 hagamos flattr a un proyecto, por favor, dínoslo en la [[file:org-mode-support.org][lista de
 correo]]. 
 
@@ -45,11 +45,11 @@ correo]].
 Por cada [[http://www.network-theory.co.uk/org/manual/][Org Manual que compres en Network Theory LTD]], se donará 1$ al
 mantenedor.
 
-* ¡Compra la camiseta/mochila/mochila Org-mode!
+* ¡Compra la camiseta/mochila/mochila Org mode!
 
 Los ingresos de la tienda son para Carsten, el autor original de
-Org-mode y todavía un contribuidor muy activo. Es también un buena
-manera manera de contarle al mundo que te gusta Org-mode!. Se puede
+Org mode y todavía un contribuidor muy activo. Es también un buena
+manera manera de contarle al mundo que te gusta Org mode!. Se puede
 comprar en la [[http://orgmode.spreadshirt.com][tienda de EEUU]] o en la [[http://orgmode.spreadshirt.de][tienda europea]]...
 
 #+HTML: <img src="http://orgmode.org/img/shirts.jpg" style="border:1px solid black; width:200px" alt="http://orgmode.org/img/shirts.jpg" />
