--- a/es/talks.org
+++ b/es/talks.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: Charlas
+#+TITLE: Org mode: Charlas
 #+AUTHOR: Bastien
 #+LANGUAGE:  es
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
@@ -11,7 +11,7 @@
 
 * GoogleTech Talk by Carsten Dominik (2008)
 
-Here is the video of the [[http://research.google.com/video.html][Google Tech Talk]] about Org-mode that I gave on
+Here is the video of the [[http://research.google.com/video.html][Google Tech Talk]] about Org mode that I gave on
 July 15th, 2008 on the Google campus in Mountain View, California.  Thanks
 to [[http://emacspeak.sourceforge.net/raman/][T.V. Raman]] and [[http://technical-dresese.blogspot.com/][Andrew Hyatt]] for being my hosts during my stay.
 
@@ -35,7 +35,7 @@ Max Plank para la Investigación Neurológica en Colonia, Alemania
 <iframe src="http://twit.tv/embed/8239" width="640" height="320" scrolling="no" marginwidth="0" marginheight="0" hspace="0" align="middle" frameborder="0"></iframe>
 #+end_html
 
-* Presentaciones de Org-mode por Bastien (2011)
+* Presentaciones de Org mode por Bastien (2011)
 
 ** Presentación de Org en FOSDEM 2011
 
