--- a/fr/org-mode-plus.org
+++ b/fr/org-mode-plus.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: Liens
+#+TITLE: Org mode: Liens
 #+AUTHOR: Bastien
 #+LANGUAGE:  fr
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
@@ -9,9 +9,9 @@
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 #+STYLE:     <link rel="publisher" href="https://plus.google.com/102778904320752967064" />
 
-* Présentations au sujet d'Org-mode
+* Présentations au sujet d'Org mode
 
-  Carsten Dominik a donné un /GoogleTech talk/ au sujet d'Org-mode et a
+  Carsten Dominik a donné un /GoogleTech talk/ au sujet d'Org mode et a
   fait une autre présentation au [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological
   Research]].  Carsten est aussi interviewé par Randal Schwartz dans le
   [[http://twit.tv/floss136][numéro 136 de FLOSS Weekly]].
