--- a/fr/talks.org
+++ b/fr/talks.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: Présentations
+#+TITLE: Org mode: Présentations
 #+AUTHOR: Bastien
 #+LANGUAGE:  fr
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
@@ -11,7 +11,7 @@
 
 * GoogleTech Talk, par Carsten Dominik (2008)
 
-Here is the video of the [[http://research.google.com/video.html][Google Tech Talk]] about Org-mode that I gave on
+Here is the video of the [[http://research.google.com/video.html][Google Tech Talk]] about Org mode that I gave on
 July 15th, 2008 on the Google campus in Mountain View, California.  Thanks
 to [[http://emacspeak.sourceforge.net/raman/][T.V. Raman]] and [[http://technical-dresese.blogspot.com/][Andrew Hyatt]] for being my hosts during my stay.
 
@@ -35,7 +35,7 @@ Max Planck pour la recherche en neurologie, à Cologne, Allemagne
 <iframe src="http://twit.tv/embed/8239" width="640" height="320" scrolling="no" marginwidth="0" marginheight="0" hspace="0" align="middle" frameborder="0"></iframe>
 #+end_html
 
-* Présentation d'Org-mode par Bastien (2011)
+* Présentation d'Org mode par Bastien (2011)
 
 ** Présentation d'Org au FOSDEM 2011
 
