--- a/ja/org-mode-documentation.org
+++ b/ja/org-mode-documentation.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: ドキュメント
+#+TITLE: Org mode: ドキュメント
 #+AUTHOR: Takaaki Ishikawa
 #+LANGUAGE:  ja
 #+KEYWORDS:  Org Emacs アウトライン 計画 ノート 編集 プロジェクト プレーンテキスト LaTeX HTML
@@ -9,9 +9,9 @@
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 #+STYLE:     <link rel="publisher" href="https://plus.google.com/102778904320752967064" />
 
-* Org-mode のガイドとマニュアル
+* Org mode のガイドとマニュアル
 
-- [[http://orgmode.org/guide/index.html][オンラインのコンパクトガイド]]を読むか、[[http://orgmode.org/orgguide.pdf][PDF]] をダウンロードする。このコンパクトガイドは、40ページ程度にまとめられたOrg-modeの概要です。すべての機能を簡潔に網羅していて、マニュアルとウェブの詳細な資料へのリンクが載せられています。
+- [[http://orgmode.org/guide/index.html][オンラインのコンパクトガイド]]を読むか、[[http://orgmode.org/orgguide.pdf][PDF]] をダウンロードする。このコンパクトガイドは、40ページ程度にまとめられたOrg modeの概要です。すべての機能を簡潔に網羅していて、マニュアルとウェブの詳細な資料へのリンクが載せられています。
 
 - [[http://orgmode.org/manual/index.html][オンラインのマニュアル]]を読む。マニュアルは、すべての機能を解説しています。あまり役立たないかもしれない情報も含んでいますが、体系的にまとめられています。主要な構造がコンパクトガイドと一致しているので、基本的な説明と詳細な記述を気軽に行き来できます。
 
@@ -27,18 +27,18 @@
 
 - 約200ページにおよぶ [[http://orgmode.org/org.pdf][PDF]] をダウンロードする。
 
-- ペーパーバック版のマニュアルを [[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd.]] で購入する。一冊販売されると、そのうち1ドルが Org-mode プロジェクトに寄付されます。
+- ペーパーバック版のマニュアルを [[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd.]] で購入する。一冊販売されると、そのうち1ドルが Org mode プロジェクトに寄付されます。
 
 - マニュアルの翻訳：
   - Takeshi Okano氏による[[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][日本語翻訳 (4.60)]]
   - [[http://gnu.manticore.es/manual-org-emacs][スペイン語翻訳 (6.21b)]]
     
-* Org-mode のリファレンスカード
+* Org mode のリファレンスカード
   - [[http://orgmode.org/orgcard.pdf][PDF]] のリファレンスカードをダウンロードする
   - [[http://orgmode.jp/orgcard-ja.txt][テキスト版]]をダウンロードする
 
 * よくある質問
-  - Org-modeの[[http://orgmode.org/worg/org-faq.php][よくある質問]]は、ユーザ自身が編集でき、[[http://orgmode.org/worg/][Worgプロジェクト]]でコミュニティによって管理されています。
+  - Org modeの[[http://orgmode.org/worg/org-faq.php][よくある質問]]は、ユーザ自身が編集でき、[[http://orgmode.org/worg/][Worgプロジェクト]]でコミュニティによって管理されています。
 
 * チュートリアル
   - [[http://orgmode.org/worg/org-tutorials/index.php][チュートリアルとスクリーンキャスト]]の完全なリストが、[[http://orgmode.org/worg][Worgプロジェクト]]で管理されています。
@@ -49,7 +49,7 @@
   Environment for Literate Programming and Reproducible Research]] ([[http://www.jstatsoft.org/v46/i03/paper][pdf]]).
   Journal of Statistical Software, Vol. 46, Issue 3, January 2012.
 
-- Schulte, E.; Davison, D.; [[http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber%3D5756277][Active Documents with Org-Mode]], Computing in
+- Schulte, E.; Davison, D.; [[http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber%3D5756277][Active Documents with Org mode]], Computing in
   Science & Engineering, Vol. 13, Issue 3, May-June 2011.
 
 - Delescluse M., Franconville R., Joucla S., Lieury T. and Pouzat C.,
