--- a/ja/org-mode-donate.org
+++ b/ja/org-mode-donate.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: 寄付しましょう
+#+TITLE: Org mode: 寄付しましょう
 #+AUTHOR: Takaaki Ishikawa
 #+LANGUAGE:  ja
 #+KEYWORDS:  Org Emacs アウトライン 計画 ノート 編集 プロジェクト プレーンテキスト LaTeX HTML
@@ -11,7 +11,7 @@
 
 * なぜ寄付が必要か？
 
-Org-modeは、今この瞬間にも成長し続けています。あなたの寄付でメンテナーを助けて下さい。メンテナーは、Org-modeの維持管理にもっと専念できます。
+Org modeは、今この瞬間にも成長し続けています。あなたの寄付でメンテナーを助けて下さい。メンテナーは、Org modeの維持管理にもっと専念できます。
 
 * Paypal を使って寄付する
 
@@ -21,7 +21,7 @@ Paypal を使った寄付を検討してみてください。
 <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
   <input type="hidden" name="cmd" value="_xclick" />
   <input type="hidden" name="business" value="bastien1@free.fr" />
-  <input type="hidden" name="item_name" value="Emacs Org-mode maintainance" />
+  <input type="hidden" name="item_name" value="Emacs Org mode maintainance" />
   <input type="hidden" name="item_number" value="1" />
   <input type="hidden" name="lc" value="US" />
   <input type="hidden" name="currency_code" value="USD" />
@@ -32,7 +32,7 @@ Paypal を使った寄付を検討してみてください。
 
 * Flattr!
 
-flatter を使うことでも org-mode を支援できます。Org-modeユーザが気に入る他のプロジェクトを flattr できるので、もしあなたがOrg-modeのユーザで、flattr して欲しいプロジェクトがあるならば、[[http://orgmode.org/org-mode-support.org][メーリングリスト]]に連絡してください。
+flatter を使うことでも org-mode を支援できます。Org modeユーザが気に入る他のプロジェクトを flattr できるので、もしあなたがOrg modeのユーザで、flattr して欲しいプロジェクトがあるならば、[[http://orgmode.org/org-mode-support.org][メーリングリスト]]に連絡してください。
 
 #+HTML: <a class="FlattrButton" style="display:none;" href="http://orgmode.org"></a>
 
@@ -40,9 +40,9 @@ flatter を使うことでも org-mode を支援できます。Org-modeユーザ
 
 [[http://www.network-theory.co.uk/org/manual/][Network Theory LTD]] でマニュアルが一冊売れると、1ドルがメンテナーに支払われます。
 
-* Org-mode のTシャツ／マグカップ／バッグを購入する
+* Org mode のTシャツ／マグカップ／バッグを購入する
 
-ショップの売上げは、org-modeの生みの親である Carsten 氏に支払われます。Carsten 氏は、現在も非常にアクティブな貢献者です。また、これらのグッズを使うことで、Org-modeのファンであることを世界中の人に伝えるのもいいですね。[[http://orgmode.spreadshirt.com][US shop]] か [[http://orgmode.spreadshirt.de][EU shop]] で販売しています。
+ショップの売上げは、org-modeの生みの親である Carsten 氏に支払われます。Carsten 氏は、現在も非常にアクティブな貢献者です。また、これらのグッズを使うことで、Org modeのファンであることを世界中の人に伝えるのもいいですね。[[http://orgmode.spreadshirt.com][US shop]] か [[http://orgmode.spreadshirt.de][EU shop]] で販売しています。
 
 #+HTML: <img src="http://orgmode.org/img/shirts.jpg" style="border:1px solid black; width:200px" alt="http://orgmode.org/img/shirts.jpg" />
 
