--- a/ja/org-mode-links.org
+++ b/ja/org-mode-links.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: 関連情報
+#+TITLE: Org mode: 関連情報
 #+AUTHOR: Takaaki Ishikawa
 #+LANGUAGE:  ja
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
@@ -9,11 +9,11 @@
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 #+STYLE:     <link rel="publisher" href="https://plus.google.com/102778904320752967064" />
 
-* Org-modeについての講演
+* Org modeについての講演
 
-GoogleTech talk と [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological Research]] にて、Carsten Dominik 氏が Org-mode について講演しました。FLOSS ウィークリィ [[http://twit.tv/floss136][show number 136]] では、Randal Schwartz氏が、Carsten Dominik 氏に対して Org-mode についてのインタビューを行いました。
+GoogleTech talk と [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological Research]] にて、Carsten Dominik 氏が Org mode について講演しました。FLOSS ウィークリィ [[http://twit.tv/floss136][show number 136]] では、Randal Schwartz氏が、Carsten Dominik 氏に対して Org mode についてのインタビューを行いました。
 
-[[http://fosdem.org/2011/][FOSDEM 2011]] にて、Bastien 氏が Org-mode についてのプレゼンテーションを行いました（Stefan Vollmar 氏による研究室内での利用例と、Sébastien Vauban 氏による Org Babel のプレゼンを含む）。プレゼンテーションのスライドを [[http://lumiere.ens.fr/~guerry/u/org-fosdem-presentation-beamer.pdf][PDF]] で入手できます。2011年8月に、Bastien 氏は、パリで開催された GNU Hackers Meeting でも同じプレゼン（一部更新あり）を行いました。
+[[http://fosdem.org/2011/][FOSDEM 2011]] にて、Bastien 氏が Org mode についてのプレゼンテーションを行いました（Stefan Vollmar 氏による研究室内での利用例と、Sébastien Vauban 氏による Org Babel のプレゼンを含む）。プレゼンテーションのスライドを [[http://lumiere.ens.fr/~guerry/u/org-fosdem-presentation-beamer.pdf][PDF]] で入手できます。2011年8月に、Bastien 氏は、パリで開催された GNU Hackers Meeting でも同じプレゼン（一部更新あり）を行いました。
 
 すべての講演は、 [[http://orgmode.org/talks.html][専用の「講演」ページ]]で観られます。
 
