--- a/org-mode-donate.org
+++ b/org-mode-donate.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: Make a donation
+#+TITLE: Org mode: Make a donation
 #+AUTHOR: Bastien
 #+LANGUAGE:  en
 #+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
@@ -34,7 +34,7 @@ Please consider making a donation through paypal:
 <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
   <input type="hidden" name="cmd" value="_xclick" />
   <input type="hidden" name="business" value="bastien1@free.fr" />
-  <input type="hidden" name="item_name" value="Emacs Org-mode maintainance" />
+  <input type="hidden" name="item_name" value="Emacs Org mode maintainance" />
   <input type="hidden" name="item_number" value="1" />
   <input type="hidden" name="lc" value="US" />
   <input type="hidden" name="currency_code" value="USD" />
@@ -45,8 +45,8 @@ Please consider making a donation through paypal:
 
 * Flattr!
 
-You can also use flattr to support Org-mode.  We flattr projects we
-love.  If you are an Org-mode user and want us to flattr a project, please
+You can also use flattr to support Org mode.  We flattr projects we
+love.  If you are an Org mode user and want us to flattr a project, please
 tell us on the [[file:org-mode-support.org][mailing list]].
 
 #+HTML: <a class="FlattrButton" style="display:none;" href="http://orgmode.org"></a>
@@ -56,11 +56,11 @@ tell us on the [[file:org-mode-support.org][mailing list]].
 For each [[http://www.network-theory.co.uk/org/manual/][Org Manual you buy at Network Theory LTD]], there is 1 USD given to
 the maintainer.
 
-* Buy the Org-mode shirt/mug/bag!
+* Buy the Org mode shirt/mug/bag!
 
-The shop's revenue goes to Carsten, the original author of Org-mode, still
+The shop's revenue goes to Carsten, the original author of Org mode, still
 a very active contributor.  It's also a nice way to tell the world you like
-Org-mode!  You can buy at the [[http://orgmode.spreadshirt.com][US shop]] or at the [[http://orgmode.spreadshirt.de][EU shop]]...
+Org mode!  You can buy at the [[http://orgmode.spreadshirt.com][US shop]] or at the [[http://orgmode.spreadshirt.de][EU shop]]...
 
 #+HTML: <img src="http://orgmode.org/img/shirts.jpg" style="border:1px solid black; width:200px" alt="http://orgmode.org/img/shirts.jpg" />
 
