--- a/org-mode-links.org
+++ b/org-mode-links.org
@@ -1,4 +1,4 @@
-#+TITLE: Org-Mode: Links
+#+TITLE: Org mode: Links
 #+AUTHOR: Bastien
 #+LANGUAGE:  en
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
@@ -21,9 +21,9 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-links.ht
 </script>
 #+end_html
 
-* Talks about Org-mode
+* Talks about Org mode
 
-  Carsten Dominik gave a GoogleTech talk about Org-mode and another one at
+  Carsten Dominik gave a GoogleTech talk about Org mode and another one at
   the [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological Research]].  FLOSS Weekly [[http://twit.tv/floss136][show
   number 136]] Randal Schwartz interviews Carsten about Org mode.
 
