--- a/sitemap.org
+++ b/sitemap.org
@@ -8,8 +8,8 @@
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 #+STYLE:     <link rel="publisher" href="https://plus.google.com/102778904320752967064" />
 
-- [[file:todo.org][The Org-mode TODO list]]
-- [[file:survey.org][Org-Mode Survey Results]]
-- [[file:Changes_old.org][Archive list of Org-mode user-visible changes]]
-- [[file:Changes.org][Org-mode list of user-visible changes]]
-- [[file:index.org][Org-Mode: Your Life in Plain Text]]
+- [[file:todo.org][The Org mode TODO list]]
+- [[file:survey.org][Org mode Survey Results]]
+- [[file:Changes_old.org][Archive list of Org mode user-visible changes]]
+- [[file:Changes.org][Org mode list of user-visible changes]]
+- [[file:index.org][Org mode: Your Life in Plain Text]]
